2025-05-06T00:53:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14849343960 # 635
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-06
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 818 1296 / 832 1310
* notice: next accum: outdated-unq outdated-all / unq all: 818 1296 / 833 1311
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-22 2025-05-05]

2025-05-05T00:56:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14826985530 # 634
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-05
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 817 1295 / 831 1309
* notice: next accum: outdated-unq outdated-all / unq all: 818 1296 / 832 1310
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-21] / [2025-05-04]

2025-05-04T00:58:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14816183612 # 633
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-04
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 816 1294 / 830 1308
* notice: next accum: outdated-unq outdated-all / unq all: 817 1295 / 831 1309
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-20] / [2025-05-03]

2025-05-03T00:51:47Z: