@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-05-06T00:53:36Z",
-  "count_outdated" : 1296,
-  "uniques_outdated" : 818,
-  "count" : 1311,
-  "uniques" : 833,
+  "timestamp" : "2025-05-07T00:53:43Z",
+  "count_outdated" : 1299,
+  "uniques_outdated" : 821,
+  "count" : 1312,
+  "uniques" : 834,
   "clones" : [
-    {
-      "timestamp": "2025-04-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-04-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
@@ -115,6 +97,15 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
