@@ -1,17 +1,7 @@
 {
-  "count": 14,
-  "uniques": 4,
+  "count": 13,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-04-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-04-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
@@ -64,6 +54,11 @@
     },
     {
       "timestamp": "2025-05-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
